# changelog-checker

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/: .codecov.yml
.github/workflows/: ci.yml  release.yml
changelog_checker/: core.py
changelog_checker/parsers/: __init__.py  pip_parser.py
changelog_checker/research/: changelog_finder.py
tests/: conftest.py  test_changelog_finder.py  test_cli.py  test_html_formatter.py  test_models.py  test_package_finder.py  test_parse_changelog_cases.py  test_pip_parser.py  test_rich_formatter.py  test_uv_parser.py
