[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "changelog-checker"
dynamic = ["version", "readme"]
description = "A tool for analyzing dependency updates and their changelogs."
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "MrNaif2018", email = "chuff184@gmail.com" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["changelog", "checker", "dependency", "update", "analysis"]
dependencies = [
    "click>=8.2.1",
    "distlib>=0.3.9",
    "googlesearch-python>=1.3.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
]
scripts = { changelog-checker = "changelog_checker.cli:main" }

[project.optional-dependencies]
rst = ["rich-rst>=1.3.1"]
beautiful-html = ["docutils>=0.21.2", "markdown>=3.8.2"]

[project.urls]
Homepage = "https://github.com/MrNaif2018/changelog-checker"
Source = "https://github.com/MrNaif2018/changelog-checker"
Changelog = "https://github.com/MrNaif2018/changelog-checker/blob/master/CHANGELOG.md"

[dependency-groups]
lint = ["mypy", "prek", "ruff"]
test = ["pytest", "pytest-cov", "pytest-durations", "pytest-mock"]
types = ["types-docutils", "types-markdown", "types-requests"]
dev = [
    "rust-just>=1.46.0",
    { include-group = "lint" },
    { include-group = "test" },
    { include-group = "types" },
]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "changelog_checker/version.py" },
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]
# relative links to absolute
substitutions = [
    { pattern = '\[(.+?)\]\(((?!https?://)\S+?)\)', replacement = '[\1](https://raw.githubusercontent.com/MrNaif2018/changelog-checker/master\g<2>)' },
]

[tool.hatch.build.targets.wheel]
packages = ["changelog_checker"]

[tool.hatch.version]
path = "changelog_checker/version.py"

[tool.hatch.build.targets.sdist]
include = ["changelog_checker"]

[tool.ruff]
target-version = "py311"
line-length = 127

[tool.ruff.lint]
select = [
    "F",
    "E",
    "I",
    "UP",
    "YTT",
    "B",
    "T10",
    "C",
    "SIM",
    "RUF100",
    "RET",
    "A",
    "S",
    "ASYNC",
    "TID",
]
unfixable = ["F401"]
ignore = ["RET502", "RET503", "S104", "S507", "ASYNC110"]
mccabe = { max-complexity = 12 }

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.mypy]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
disallow_untyped_defs = true
skip_cache_mtime_checks = true
disallow_untyped_calls = true
warn_return_any = true
no_implicit_optional = true
strict_optional = true
exclude = ["tests"]

[tool.pytest.ini_options]
junit_duration_report = "call"
junit_suite_name = "changelog_checker_test_suite"
addopts = [
    "--cov=changelog_checker",
    "--cov-report",
    "term-missing",
    "--disable-network",
]
filterwarnings = [
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning",
]
markers = ["live: mark tests as needing an internet connection to run."]
